[package]
name = "berq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.8.0", features = ["actix-tls", "openssl", "rustls"] }
awc = { version = "3.5.0", features = ["openssl", "rustls"] }
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
